--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="icon" type="image/xicon" href="papatya1.png">
-    <link rel="stylesheet" type="text/css" href="CV/cv.css" />
+    <link rel="stylesheet" type="text/css" href="cv.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,7 +84,7 @@
     </p>
   </footer>
 
-  <script src="main/CV/papatya.js"></script>
+  <script src="papatya.js"></script>
 
 </body>
 </html>
